Install redis (try to keep under 50 characters)
Other samll changes

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/tfgGG/django-note#readme",
   "dependencies": {
+    "redis": "^2.8.0",
     "simplemde": "^1.11.2"
   }
 }
