--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/tfgGG/django-note#readme",
   "dependencies": {
+    "express": "^4.15.2",
     "redis": "^2.8.0",
-    "simplemde": "^1.11.2"
+    "simplemde": "^1.11.2",
+    "socket.io": "^2.1.1"
   }
 }
